y.output

state 0
	$accept: .Programa $end 

	PROGRAMA  shift 2
	.  error

	Programa  goto 1

state 1
	$accept:  Programa.$end 

	$end  accept
	.  error


state 2
	Programa:  PROGRAMA.ID PCOMA $$1 VarsOpt FuncsOpt INICIO $$2 Cuerpo FIN 

	ID  shift 3
	.  error


state 3
	Programa:  PROGRAMA ID.PCOMA $$1 VarsOpt FuncsOpt INICIO $$2 Cuerpo FIN 

	PCOMA  shift 4
	.  error


state 4
	Programa:  PROGRAMA ID PCOMA.$$1 VarsOpt FuncsOpt INICIO $$2 Cuerpo FIN 
	$$1: .    (1)

	.  reduce 1 (src line 42)

	$$1  goto 5

state 5
	Programa:  PROGRAMA ID PCOMA $$1.VarsOpt FuncsOpt INICIO $$2 Cuerpo FIN 
	VarsOpt: .    (5)

	VARS  shift 8
	.  reduce 5 (src line 53)

	VarsOpt  goto 6
	Vars  goto 7

state 6
	Programa:  PROGRAMA ID PCOMA $$1 VarsOpt.FuncsOpt INICIO $$2 Cuerpo FIN 
	FuncsOpt: .    (7)

	.  reduce 7 (src line 54)

	FuncsOpt  goto 9

state 7
	VarsOpt:  Vars.    (4)

	.  reduce 4 (src line 53)


state 8
	Vars:  VARS.LLLAVE DeclaracionLista RLLAVE 

	LLLAVE  shift 10
	.  error


state 9
	Programa:  PROGRAMA ID PCOMA $$1 VarsOpt FuncsOpt.INICIO $$2 Cuerpo FIN 
	FuncsOpt:  FuncsOpt.Funcs 

	INICIO  shift 11
	ENTERO  shift 16
	FLOTANTE  shift 17
	NULA  shift 15
	.  error

	Tipo  goto 14
	TipoRetorno  goto 13
	Funcs  goto 12

state 10
	Vars:  VARS LLLAVE.DeclaracionLista RLLAVE 

	ID  shift 21
	.  error

	DeclaracionLista  goto 18
	Declaracion  goto 19
	IdsLista  goto 20

state 11
	Programa:  PROGRAMA ID PCOMA $$1 VarsOpt FuncsOpt INICIO.$$2 Cuerpo FIN 
	$$2: .    (2)

	.  reduce 2 (src line 45)

	$$2  goto 22

state 12
	FuncsOpt:  FuncsOpt Funcs.    (6)

	.  reduce 6 (src line 54)


state 13
	Funcs:  TipoRetorno.ID LPARENTESIS ParametrosOpt RPARENTESIS $$20 LLLAVE VarsOpt EstatutosLista RLLAVE PCOMA 

	ID  shift 23
	.  error


state 14
	TipoRetorno:  Tipo.    (22)

	.  reduce 22 (src line 76)


state 15
	TipoRetorno:  NULA.    (23)

	.  reduce 23 (src line 76)


state 16
	Tipo:  ENTERO.    (15)

	.  reduce 15 (src line 66)


state 17
	Tipo:  FLOTANTE.    (16)

	.  reduce 16 (src line 66)


state 18
	Vars:  VARS LLLAVE DeclaracionLista.RLLAVE 
	DeclaracionLista:  DeclaracionLista.Declaracion 

	ID  shift 21
	RLLAVE  shift 24
	.  error

	Declaracion  goto 25
	IdsLista  goto 20

state 19
	DeclaracionLista:  Declaracion.    (9)

	.  reduce 9 (src line 56)


state 20
	Declaracion:  IdsLista.DOSPUNTOS Tipo PCOMA 

	DOSPUNTOS  shift 26
	.  error


state 21
	IdsLista:  ID.IdsListaExtension 
	IdsListaExtension: .    (14)

	.  reduce 14 (src line 65)

	IdsListaExtension  goto 27

state 22
	Programa:  PROGRAMA ID PCOMA $$1 VarsOpt FuncsOpt INICIO $$2.Cuerpo FIN 

	LLLAVE  shift 29
	.  error

	Cuerpo  goto 28

state 23
	Funcs:  TipoRetorno ID.LPARENTESIS ParametrosOpt RPARENTESIS $$20 LLLAVE VarsOpt EstatutosLista RLLAVE PCOMA 

	LPARENTESIS  shift 30
	.  error


state 24
	Vars:  VARS LLLAVE DeclaracionLista RLLAVE.    (8)

	.  reduce 8 (src line 55)


state 25
	DeclaracionLista:  DeclaracionLista Declaracion.    (10)

	.  reduce 10 (src line 56)


state 26
	Declaracion:  IdsLista DOSPUNTOS.Tipo PCOMA 

	ENTERO  shift 16
	FLOTANTE  shift 17
	.  error

	Tipo  goto 31

state 27
	IdsLista:  ID IdsListaExtension.    (12)
	IdsListaExtension:  IdsListaExtension.COMA ID 

	COMA  shift 32
	.  reduce 12 (src line 60)


state 28
	Programa:  PROGRAMA ID PCOMA $$1 VarsOpt FuncsOpt INICIO $$2 Cuerpo.FIN 

	FIN  shift 33
	.  error


state 29
	Cuerpo:  LLLAVE.EstatutosLista RLLAVE 
	EstatutosLista: .    (19)

	.  reduce 19 (src line 68)

	EstatutosLista  goto 34

state 30
	Funcs:  TipoRetorno ID LPARENTESIS.ParametrosOpt RPARENTESIS $$20 LLLAVE VarsOpt EstatutosLista RLLAVE PCOMA 
	ParametrosOpt: .    (25)

	ID  shift 37
	.  reduce 25 (src line 79)

	ParametrosOpt  goto 35
	ParametrosLista  goto 36

state 31
	Declaracion:  IdsLista DOSPUNTOS Tipo.PCOMA 

	PCOMA  shift 38
	.  error


state 32
	IdsListaExtension:  IdsListaExtension COMA.ID 

	ID  shift 39
	.  error


state 33
	Programa:  PROGRAMA ID PCOMA $$1 VarsOpt FuncsOpt INICIO $$2 Cuerpo FIN.    (3)

	.  reduce 3 (src line 47)


state 34
	Cuerpo:  LLLAVE EstatutosLista.RLLAVE 
	EstatutosLista:  EstatutosLista.Estatuto 

	ID  shift 49
	RETORNO  shift 54
	SI  shift 50
	MIENTRAS  shift 51
	ESCRIBE  shift 52
	RLLAVE  shift 40
	LCORCHETE  shift 53
	.  error

	Estatuto  goto 41
	Asigna  goto 42
	Condicion  goto 43
	Ciclo  goto 44
	Llamada  goto 45
	Imprime  goto 46
	EstatutoBloque  goto 47
	Retorno  goto 48

state 35
	Funcs:  TipoRetorno ID LPARENTESIS ParametrosOpt.RPARENTESIS $$20 LLLAVE VarsOpt EstatutosLista RLLAVE PCOMA 

	RPARENTESIS  shift 55
	.  error


state 36
	ParametrosOpt:  ParametrosLista.    (24)

	.  reduce 24 (src line 79)


state 37
	ParametrosLista:  ID.DOSPUNTOS Tipo $$26 ParametrosListaExtension 

	DOSPUNTOS  shift 56
	.  error


state 38
	Declaracion:  IdsLista DOSPUNTOS Tipo PCOMA.    (11)

	.  reduce 11 (src line 57)


state 39
	IdsListaExtension:  IdsListaExtension COMA ID.    (13)

	.  reduce 13 (src line 63)


state 40
	Cuerpo:  LLLAVE EstatutosLista RLLAVE.    (17)

	.  reduce 17 (src line 67)


state 41
	EstatutosLista:  EstatutosLista Estatuto.    (18)

	.  reduce 18 (src line 68)


state 42
	Estatuto:  Asigna.    (30)

	.  reduce 30 (src line 86)


state 43
	Estatuto:  Condicion.    (31)

	.  reduce 31 (src line 86)


state 44
	Estatuto:  Ciclo.    (32)

	.  reduce 32 (src line 86)


state 45
	Estatuto:  Llamada.PCOMA 

	PCOMA  shift 57
	.  error


state 46
	Estatuto:  Imprime.    (34)

	.  reduce 34 (src line 86)


state 47
	Estatuto:  EstatutoBloque.    (35)

	.  reduce 35 (src line 86)


state 48
	Estatuto:  Retorno.    (36)

	.  reduce 36 (src line 86)


state 49
	Asigna:  ID.ASIGNAVAR Expresion $$42 PCOMA 
	Llamada:  ID.$$83 LPARENTESIS ArgumentosOpt RPARENTESIS 
	$$83: .    (83)

	ASIGNAVAR  shift 58
	.  reduce 83 (src line 162)

	$$83  goto 59

state 50
	Condicion:  SI.LPARENTESIS Expresion RPARENTESIS $$69 Cuerpo SinoOpt PCOMA 

	LPARENTESIS  shift 60
	.  error


state 51
	Ciclo:  MIENTRAS.$$74 LPARENTESIS Expresion RPARENTESIS $$75 HAZ Cuerpo PCOMA 
	$$74: .    (74)

	.  reduce 74 (src line 150)

	$$74  goto 61

state 52
	Imprime:  ESCRIBE.LPARENTESIS ImprimeLista $$77 RPARENTESIS PCOMA 

	LPARENTESIS  shift 62
	.  error


state 53
	EstatutoBloque:  LCORCHETE.EstatutosBloqueLista RCORCHETE 

	ID  shift 49
	RETORNO  shift 54
	SI  shift 50
	MIENTRAS  shift 51
	ESCRIBE  shift 52
	LCORCHETE  shift 53
	.  error

	Estatuto  goto 64
	Asigna  goto 42
	Condicion  goto 43
	Ciclo  goto 44
	Llamada  goto 45
	Imprime  goto 46
	EstatutoBloque  goto 47
	Retorno  goto 48
	EstatutosBloqueLista  goto 63

state 54
	Retorno:  RETORNO.Expresion $$37 PCOMA 

	ID  shift 74
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  error

	Llamada  goto 73
	Expresion  goto 65
	Exp  goto 66
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75

state 55
	Funcs:  TipoRetorno ID LPARENTESIS ParametrosOpt RPARENTESIS.$$20 LLLAVE VarsOpt EstatutosLista RLLAVE PCOMA 
	$$20: .    (20)

	.  reduce 20 (src line 69)

	$$20  goto 78

state 56
	ParametrosLista:  ID DOSPUNTOS.Tipo $$26 ParametrosListaExtension 

	ENTERO  shift 16
	FLOTANTE  shift 17
	.  error

	Tipo  goto 79

state 57
	Estatuto:  Llamada PCOMA.    (33)

	.  reduce 33 (src line 86)


state 58
	Asigna:  ID ASIGNAVAR.Expresion $$42 PCOMA 

	ID  shift 74
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  error

	Llamada  goto 73
	Expresion  goto 80
	Exp  goto 66
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75

state 59
	Llamada:  ID $$83.LPARENTESIS ArgumentosOpt RPARENTESIS 

	LPARENTESIS  shift 81
	.  error


state 60
	Condicion:  SI LPARENTESIS.Expresion RPARENTESIS $$69 Cuerpo SinoOpt PCOMA 

	ID  shift 74
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  error

	Llamada  goto 73
	Expresion  goto 82
	Exp  goto 66
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75

state 61
	Ciclo:  MIENTRAS $$74.LPARENTESIS Expresion RPARENTESIS $$75 HAZ Cuerpo PCOMA 

	LPARENTESIS  shift 83
	.  error


state 62
	Imprime:  ESCRIBE LPARENTESIS.ImprimeLista $$77 RPARENTESIS PCOMA 

	ID  shift 74
	LITERAL  shift 87
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  error

	Llamada  goto 73
	Expresion  goto 86
	Exp  goto 66
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75
	ImprimeLista  goto 84
	ImprimeEl  goto 85

state 63
	EstatutoBloque:  LCORCHETE EstatutosBloqueLista.RCORCHETE 
	EstatutosBloqueLista:  EstatutosBloqueLista.Estatuto 

	ID  shift 49
	RETORNO  shift 54
	SI  shift 50
	MIENTRAS  shift 51
	ESCRIBE  shift 52
	LCORCHETE  shift 53
	RCORCHETE  shift 88
	.  error

	Estatuto  goto 89
	Asigna  goto 42
	Condicion  goto 43
	Ciclo  goto 44
	Llamada  goto 45
	Imprime  goto 46
	EstatutoBloque  goto 47
	Retorno  goto 48

state 64
	EstatutosBloqueLista:  Estatuto.    (41)

	.  reduce 41 (src line 91)


state 65
	Retorno:  RETORNO Expresion.$$37 PCOMA 
	$$37: .    (37)

	.  reduce 37 (src line 87)

	$$37  goto 90

state 66
	Expresion:  Exp.    (44)
	Expresion:  Exp.Operadores Exp 
	Exp:  Exp.MAS $$50 Termino 
	Exp:  Exp.MENOS $$52 Termino 

	MAS  shift 92
	MENOS  shift 93
	MAYOR  shift 94
	MENOR  shift 95
	IGUAL  shift 96
	DIFERENTE  shift 97
	.  reduce 44 (src line 95)

	Operadores  goto 91

state 67
	Exp:  Termino.    (54)
	Termino:  Termino.POR $$55 Factor 
	Termino:  Termino.ENTRE $$57 Factor 

	POR  shift 98
	ENTRE  shift 99
	.  reduce 54 (src line 115)


state 68
	Termino:  Factor.    (59)

	.  reduce 59 (src line 124)


state 69
	Factor:  LPARENTESIS.Expresion RPARENTESIS 

	ID  shift 74
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  error

	Llamada  goto 73
	Expresion  goto 100
	Exp  goto 66
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75

state 70
	Factor:  FactorOpt.    (61)

	.  reduce 61 (src line 125)


state 71
	Factor:  MAS.FactorOpt 

	ID  shift 102
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	.  error

	FactorOpt  goto 101
	CTE  goto 75

state 72
	Factor:  MENOS.FactorOpt 

	ID  shift 102
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	.  error

	FactorOpt  goto 103
	CTE  goto 75

state 73
	Factor:  Llamada.    (64)

	.  reduce 64 (src line 125)


state 74
	FactorOpt:  ID.    (65)
	Llamada:  ID.$$83 LPARENTESIS ArgumentosOpt RPARENTESIS 
	$$83: .    (83)

	LPARENTESIS  reduce 83 (src line 162)
	.  reduce 65 (src line 126)

	$$83  goto 59

state 75
	FactorOpt:  CTE.    (66)

	.  reduce 66 (src line 132)


state 76
	CTE:  CTE_ENT.    (67)

	.  reduce 67 (src line 133)


state 77
	CTE:  CTE_FLOT.    (68)

	.  reduce 68 (src line 136)


state 78
	Funcs:  TipoRetorno ID LPARENTESIS ParametrosOpt RPARENTESIS $$20.LLLAVE VarsOpt EstatutosLista RLLAVE PCOMA 

	LLLAVE  shift 104
	.  error


state 79
	ParametrosLista:  ID DOSPUNTOS Tipo.$$26 ParametrosListaExtension 
	$$26: .    (26)

	.  reduce 26 (src line 80)

	$$26  goto 105

state 80
	Asigna:  ID ASIGNAVAR Expresion.$$42 PCOMA 
	$$42: .    (42)

	.  reduce 42 (src line 92)

	$$42  goto 106

state 81
	Llamada:  ID $$83 LPARENTESIS.ArgumentosOpt RPARENTESIS 
	ArgumentosOpt: .    (86)

	ID  shift 74
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  reduce 86 (src line 168)

	Llamada  goto 73
	Expresion  goto 109
	Exp  goto 66
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75
	ArgumentosOpt  goto 107
	ArgumentosLista  goto 108

state 82
	Condicion:  SI LPARENTESIS Expresion.RPARENTESIS $$69 Cuerpo SinoOpt PCOMA 

	RPARENTESIS  shift 110
	.  error


state 83
	Ciclo:  MIENTRAS $$74 LPARENTESIS.Expresion RPARENTESIS $$75 HAZ Cuerpo PCOMA 

	ID  shift 74
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  error

	Llamada  goto 73
	Expresion  goto 111
	Exp  goto 66
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75

state 84
	Imprime:  ESCRIBE LPARENTESIS ImprimeLista.$$77 RPARENTESIS PCOMA 
	ImprimeLista:  ImprimeLista.COMA ImprimeEl 
	$$77: .    (77)

	COMA  shift 113
	.  reduce 77 (src line 157)

	$$77  goto 112

state 85
	ImprimeLista:  ImprimeEl.    (79)

	.  reduce 79 (src line 160)


state 86
	ImprimeEl:  Expresion.    (81)

	.  reduce 81 (src line 161)


state 87
	ImprimeEl:  LITERAL.    (82)

	.  reduce 82 (src line 161)


state 88
	EstatutoBloque:  LCORCHETE EstatutosBloqueLista RCORCHETE.    (39)

	.  reduce 39 (src line 90)


state 89
	EstatutosBloqueLista:  EstatutosBloqueLista Estatuto.    (40)

	.  reduce 40 (src line 91)


state 90
	Retorno:  RETORNO Expresion $$37.PCOMA 

	PCOMA  shift 114
	.  error


state 91
	Expresion:  Exp Operadores.Exp 

	ID  shift 74
	CTE_ENT  shift 76
	CTE_FLOT  shift 77
	MAS  shift 71
	MENOS  shift 72
	LPARENTESIS  shift 69
	.  error

	Llamada  goto 73
	Exp  goto 115
	Termino  goto 67
	Factor  goto 68
	FactorOpt  goto 70
	CTE  goto 75

state 92
	Exp:  Exp MAS.$$50 Termino 
	$$50: .    (50)

	.  reduce 50 (src line 107)

	$$50  goto 116

state 93
	Exp:  Exp MENOS.$$52 Termino 
	$$52: .    (52)

	.  reduce 52 (src line 111)

	$$52  goto 117

state 94
	Operadores:  MAYOR.    (46)

	.  reduce 46 (src line 98)


state 95
	Operadores:  MENOR.    (47)

	.  reduce 47 (src line 100)


state 96
	Operadores:  IGUAL.    (48)

	.  reduce 48 (src line 102)


state 97
	Operadores:  DIFERENTE.    (49)

	.  reduce 49 (src line 104)


state 98
	Termino:  Termino POR.$$55 Factor 
	$$55: .    (55)

	.  reduce 55 (src line 116)

	$$55  goto 118

state 99
	Termino:  Termino ENTRE.$$57 Factor 
	$$57: .    (57)

	.  reduce 57 (src line 120)

	$$57  goto 119

state 100
	Factor:  LPARENTESIS Expresion.RPARENTESIS 
